--- a/src/GBProd/ICantDecide/UI/Resources/views/Question/index.html.twig
+++ b/src/GBProd/ICantDecide/UI/Resources/views/Question/index.html.twig
@@ -1,3 +1,5 @@
 {% for question in questions %}
 <p>{{ question.text }}</p>
 {% endfor %}
+
+<a href="{{ path('question_ask') }}">ask a question</a>
