Using ES datastore for index

--- a/src/GBProd/ICantDecide/UI/Resources/views/Question/index.html.twig
+++ b/src/GBProd/ICantDecide/UI/Resources/views/Question/index.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
 {% for question in questions %}
 <div>
+    <p>{{ question.id }}</p>
     <p>{{ question.text }}</p>
     <p>{{ question.endDate|date('Y-m-d H:i:s') }}</p>
 </div>
