refacto: [wip] elastica

--- a/src/GBProd/ICantDecide/UI/Resources/views/Question/index.html.twig
+++ b/src/GBProd/ICantDecide/UI/Resources/views/Question/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'UIBundle::base.html.twig' %}
 
 {% block body %}
-{% for question in questions.hits.hits %}
+{% for question in questions %}
 <div>
-    <h4>{{ question._source.text }}</h4>
-    <p>{{ question._source.endDate|date('Y-m-d H:i:s') }}</p>
+    <h4>{{ question.text }}</h4>
+    <p>{{ question.endDate|date('Y-m-d H:i:s') }}</p>
 </div>
 {% endfor %}
 
